--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,6 +3,7 @@ version: 0.2
 phases:
   build:
     commands:
+      - cd ./kinesis-video-native-build
       - ./install_script -a
     finally:
       - echo This always runs even if the install command fails
