--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,6 +4,8 @@ phases:
   build:
     commands:
       - cd $CODEBUILD_SRC_DIR
+      - pwd
+      - ls
       - ./kinesis-video-native-build/install_script -a
     finally:
       - echo This always runs even if the install command fails
