--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,6 +11,6 @@ phases:
       - echo This always runs even if the install command fails
 artifacts:
   files:
-    - /work/downloads/local/lib/**/*
-    - /work/downloads/local/include/**/*
+    - $CODEBUILD_SRC_DIR/kinesis-video-native-build/downloads/local/lib/**/*
+    - $CODEBUILD_SRC_DIR/kinesis-video-native-build/downloads/local/include/**/*
   discard-paths: yes
