--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
       - pwd
       - ls
       - ./install-script -a
+      - ./gstreamer-plugin-install-script
     finally:
       - echo This always runs even if the install command fails
 artifacts:
